@@ -15,6 +15,10 @@ configurations {
 }
 
 dependencies {
+  // https://mvnrepository.com/artifact/org.jetbrains/annotations
+  implementation 'org.jetbrains:annotations:24.1.0'
+
+
   implementation("org.springframework.boot:spring-boot-starter")
   testImplementation("org.springframework.boot:spring-boot-starter-test")
 
@@ -45,7 +49,7 @@ dependencies {
   runtimeOnly(libraries.bundles.jjwt.runtime)
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 java {
   def javaVersion = JavaVersion.toVersion(targetJavaVersion)
 
@@ -55,6 +59,10 @@ java {
   if (JavaVersion.current() < javaVersion) {
     toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
   }
+}
+
+compileJava {
+  options.compilerArgs += ['--enable-preview']
 }
 
 processResources {
